# acorn-lang

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  DebugTesting.cpp  README.md  unix_build.sh
acorn/: AST.cpp  AST.h  Acorn.cpp  Acorn.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Compiler.cpp  Compiler.h  Context.cpp  Context.h  DeepCopyAST.cpp  DeepCopyAST.h  ErrorCodes.h  ErrorCodesDef.inc  Errors.cpp  Errors.h  FloatParsing.cpp  FloatParsing.h  GenericAST.h  GenericReset.cpp  GenericReset.h  Identifier.cpp  Identifier.h  Lexer.cpp  Lexer.h  LineTable.cpp  LineTable.h  Logger.cpp  Logger.h  Module.cpp  Module.h  Namespace.cpp  Namespace.h  PageAllocator.cpp  PageAllocator.h  Parser.cpp  Parser.h  Process.cpp  Process.h  (+24 more)
acorn/ir/: DebugGen.cpp  DebugGen.h  GenConstants.cpp  GenOperator.cpp  GenReflection.cpp  GenTypes.cpp  GenTypes.h  IRGen.cpp  IRGen.h  program
acorn/link/: Linking.cpp  Linking.h
fuzzing/: CMakeLists.txt  Fuzzer.cpp  RandomFuzzer.cpp  RandomFuzzer.h  ValidCharsFuzzer.cpp  ValidCharsFuzzer.h  ValidLexemesFuzzer.cpp  ValidLexemesFuzzer.h
tests/: CMakeLists.txt  CodegenTests.cpp  CodegenTests.h  ErrorLoggingTests.cpp  ErrorLoggingTests.h  LexerTests.cpp  LexerTests.h  ParserTests.cpp  ParserTests.h  SemaTests.cpp  SemaTests.h  TestFramework.cpp  TestFramework.h  Tests.cpp
tests/resources/: address_foldable_ident_ref_test.ac  aggr_ty_zero_init_test.ac  arithmetic_test.ac  ignore_aggr_ret_val_test.ac  main.ac  print_test.ac  ptr_arithmetic_test.ac  ptr_dereferencing.ac  ptr_memory_access_test.ac  ret_value_for_void_ret_test1.ac  ret_value_for_void_ret_test2.ac  sizeof_test.ac
tests/resources/arrays/: arrays_assignment1.ac  arrays_assignment2.ac  arrays_decay_test1.ac  arrays_decay_test2.ac  arrays_decay_test3.ac  arrays_decay_test4.ac  arrays_inline_test1.ac  arrays_inline_test2.ac  arrays_inline_test3.ac  arrays_inline_test4.ac  arrays_length_test.ac  arrays_test1.ac  arrays_test10.ac  arrays_test11.ac  arrays_test12.ac  arrays_test13.ac  arrays_test14.ac  arrays_test15.ac  arrays_test16.ac  arrays_test17.ac  arrays_test18.ac  arrays_test19.ac  arrays_test2.ac  arrays_test20.ac  arrays_test21.ac  arrays_test22.ac  arrays_test23.ac  arrays_test24.ac  arrays_test25.ac  arrays_test26.ac  arrays_test27.ac  arrays_test28.ac  arrays_test29.ac  arrays_test3.ac  arrays_test30.ac  arrays_test31.ac  arrays_test32.ac  arrays_test33.ac  arrays_test4.ac  arrays_test5.ac  (+4 more)
tests/resources/auto_type/: auto_type_test1.ac  auto_type_test10.ac  auto_type_test11.ac  auto_type_test2.ac  auto_type_test3.ac  auto_type_test4.ac  auto_type_test5.ac  auto_type_test6.ac  auto_type_test7.ac  auto_type_test8.ac  auto_type_test9.ac
tests/resources/constructors/: constructors_test1.ac  constructors_test2.ac  constructors_test3.ac  constructors_test4.ac  constructors_test5.ac
tests/resources/copy_constructors/: copy_constructors_test1.ac  copy_constructors_test10.ac  copy_constructors_test11.ac  copy_constructors_test2.ac  copy_constructors_test3.ac  copy_constructors_test4.ac  copy_constructors_test5.ac  copy_constructors_test6.ac  copy_constructors_test7.ac  copy_constructors_test8.ac  copy_constructors_test9.ac
tests/resources/default_param_values/: default_param_values1.ac  default_param_values2.ac
tests/resources/destructors/: destructors_test1.ac  destructors_test10.ac  destructors_test11.ac  destructors_test12.ac  destructors_test13.ac  destructors_test14.ac  destructors_test15.ac  destructors_test16.ac  destructors_test17.ac  destructors_test18.ac  destructors_test19.ac  destructors_test2.ac  destructors_test20.ac  destructors_test21.ac  destructors_test22.ac  destructors_test23.ac  destructors_test24.ac  destructors_test25.ac  destructors_test26.ac  destructors_test27.ac  destructors_test28.ac  destructors_test29.ac  destructors_test3.ac  destructors_test30.ac  destructors_test31.ac  destructors_test32.ac  destructors_test33.ac  destructors_test34.ac  destructors_test35.ac  destructors_test36.ac  destructors_test37.ac  destructors_test38.ac  destructors_test39.ac  destructors_test4.ac  destructors_test40.ac  destructors_test41.ac  destructors_test42.ac  destructors_test43.ac  destructors_test5.ac  destructors_test6.ac  (+3 more)
tests/resources/enums/: enums_test1.ac  enums_test2.ac  enums_test3.ac  enums_test4.ac  enums_test5.ac  enums_test6.ac  enums_test7.ac  enums_test8.ac
tests/resources/errors/: errors1.ac  errors10.ac  errors11.ac  errors12.ac  errors13.ac  errors14.ac  errors15.ac  errors16.ac  errors17.ac  errors18.ac  errors19.ac  errors2.ac  errors20.ac  errors21.ac  errors22.ac  errors23.ac  errors24.ac  errors25.ac  errors3.ac  errors4.ac  errors5.ac  errors6.ac  errors7.ac  errors8.ac  errors9.ac  errors_destructors1.ac  errors_destructors10.ac  errors_destructors11.ac  errors_destructors12.ac  errors_destructors13.ac  errors_destructors14.ac  errors_destructors2.ac  errors_destructors3.ac  errors_destructors4.ac  errors_destructors5.ac  errors_destructors6.ac  errors_destructors7.ac  errors_destructors8.ac  errors_destructors9.ac
tests/resources/func_type_calls/: func_type_calls1.ac  func_type_calls10.ac  func_type_calls2.ac  func_type_calls3.ac  func_type_calls4.ac  func_type_calls5.ac  func_type_calls6.ac  func_type_calls7.ac  func_type_calls8.ac  func_type_calls9.ac
tests/resources/generics/: generic_funcs1.ac  generic_funcs10.ac  generic_funcs11.ac  generic_funcs12.ac  generic_funcs13.ac  generic_funcs14.ac  generic_funcs15.ac  generic_funcs16.ac  generic_funcs17.ac  generic_funcs18.ac  generic_funcs19.ac  generic_funcs2.ac  generic_funcs20.ac  generic_funcs21.ac  generic_funcs3.ac  generic_funcs4.ac  generic_funcs5.ac  generic_funcs6.ac  generic_funcs7.ac  generic_funcs8.ac  generic_funcs9.ac  generic_structs1.ac  generic_structs10.ac  generic_structs11.ac  generic_structs12.ac  generic_structs13.ac  generic_structs14.ac  generic_structs2.ac  generic_structs3.ac  generic_structs4.ac  generic_structs5.ac  generic_structs6.ac  generic_structs7.ac  generic_structs8.ac  generic_structs9.ac  generics1.ac  generics10.ac  (+17 more)
(+227 files in other folders)
